Fixed summary box being too small for certain outputs

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,7 +77,7 @@
     background-color: rgb(122, 14, 245);
     color: white;
     width: 400px;
-    height: 150px;
+    height: 170px;
     border-radius: 10px;
     margin-bottom: 5px;
 }
